apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
spec:
  type: NodePort
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30808
